--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -12,8 +12,18 @@
             type="text"
             class="form-control"
             name="name"
-            placeholder="Enter your name"
+            placeholder="Entrer votre nom:"
             [(ngModel)]="credentials.name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="prenom">Prenom :</label>
+          <input
+            type="text"
+            class="form-control"
+            name="prenom"
+            placeholder="Entrer votre prenom:"
+            [(ngModel)]="credentials.prenom"
           />
         </div>
         <div class="form-group">
@@ -22,7 +32,7 @@
             type="email"
             class="form-control"
             name="email"
-            placeholder="Enter email"
+            placeholder="Entrer votre email"
             [(ngModel)]="credentials.email"
           />
         </div>
