--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -6,7 +6,7 @@
       <div class="form-horizontal">
         <div class="form-group">
           <label class="col-sm-3 control-label">Identifiant:</label>
-          <p class="form-control-static">{{ details?.name }}</p>
+          <p class="form-control-static">{{ details?.name }} {{ details?.prenom }}</p>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Email:</label>
