--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -27,6 +27,16 @@
           />
         </div>
         <div class="form-group">
+          <label for="date_naissance">Date de naissance :</label>
+          <input
+            type="date"
+            class="form-control"
+            name="date_naissance"
+            placeholder="Entrer votre date de naissance:"
+            [(ngModel)]="credentials.date_naissance"
+          />
+        </div>
+        <div class="form-group">
           <label for="email">Email :</label>
           <input
             type="email"
