affiche date naissance

--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -9,6 +9,10 @@
           <p class="form-control-static">{{ details?.name }} {{ details?.prenom }}</p>
         </div>
         <div class="form-group">
+          <label class="col-sm-3 control-label">Date de naissance:</label>
+          <p class="form-control-static">{{ details?.date_naissance }}</p>
+        </div>
+        <div class="form-group">
           <label class="col-sm-3 control-label">Email:</label>
           <p class="form-control-static">{{ details?.email }}</p>
         </div>
